--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -385,6 +385,8 @@
     --breakpoint-lg: 1024px;
     --breakpoint-xl: 1280px;
     --breakpoint-2xl: 1536px;
+    --breakpoint-3xl: 1920px;
+    --breakpoint-print: 960px;
 
     /* OPACITY SCALE */
     --opacity-0: 0;
